# mlx90640-library

./: .gitignore  CMakeLists.txt  manual_build.sh
functions/: MLX90640_API.c  MLX90640_API.cpp  MLX90640_BLEProxy.cpp  MLX90640_FileIO.c  MLX90640_LINUX_I2C_Driver.cpp  MLX90640_Test.c  MLX90640_Test.cpp
headers/: MLX90640_API.h  MLX90640_BLEProxy.h  MLX90640_Registers.h
rpi_test/: makefile  step.cpp
